# ai_templates

./: .env.template  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test.ipynb
.chroma/index/: id_to_uuid_0ff32ae6-2b3c-4f52-b0c7-0c3789a32f02.pkl  id_to_uuid_1c74eb9d-e900-4016-9305-1a2e83ceaabb.pkl  id_to_uuid_1fb8831c-70c6-4258-ad5d-8f0c93b36dd7.pkl  id_to_uuid_55e69e8c-350e-4ff4-88df-7aed6e7436f5.pkl  id_to_uuid_b08aa840-707e-4a26-9bcf-559f0dd39d14.pkl  index_metadata_0ff32ae6-2b3c-4f52-b0c7-0c3789a32f02.pkl  index_metadata_1c74eb9d-e900-4016-9305-1a2e83ceaabb.pkl  index_metadata_1fb8831c-70c6-4258-ad5d-8f0c93b36dd7.pkl  index_metadata_55e69e8c-350e-4ff4-88df-7aed6e7436f5.pkl  index_metadata_b08aa840-707e-4a26-9bcf-559f0dd39d14.pkl  uuid_to_id_0ff32ae6-2b3c-4f52-b0c7-0c3789a32f02.pkl  uuid_to_id_1c74eb9d-e900-4016-9305-1a2e83ceaabb.pkl  uuid_to_id_1fb8831c-70c6-4258-ad5d-8f0c93b36dd7.pkl  uuid_to_id_55e69e8c-350e-4ff4-88df-7aed6e7436f5.pkl  uuid_to_id_b08aa840-707e-4a26-9bcf-559f0dd39d14.pkl
ai_templates/: main.py
ai_templates/oai/: ApiManager.py
ai_templates/oai/responses/: async_chat_response.py  chat_response.py  embedding.py
ai_templates/oai/types/: Singleton.py  base.py  models.py
ai_templates/oai/utils/: count_tokens.py  wrappers.py
aitemplates/: __init__.py  cells.py  main.py
aitemplates/oai/: ApiManager.py
aitemplates/oai/responses/: async_chat_response.py  chat_response.py  embedding.py
aitemplates/oai/types/: base.py  chat.py  functions.py  models.py
aitemplates/oai/utils/: count_tokens.py  wrappers.py
chroma/: query.py
notebooks/: chroma_examples.ipynb  oai_examples.ipynb  optimize_master_prompt.ipynb  prompt_engineering.ipynb  prompt_engineering_example.ipynb
notebooks/.chroma/index/: id_to_uuid_9be98fbd-5036-400f-be96-9e3c7fb63a71.pkl  id_to_uuid_a225965f-1bf5-4a3c-af4f-8f1fb3f6c937.pkl  (+4 more)
oai/: ApiManager.py
oai/responses/: async_chat_respnose.py  chat_response.py  get_embedding.py
oai/types/: base.py  models.py
oai/utils/: count_tokens.py  wrappers.py
