[tool.poetry]
name = "aitemplates"
version = "0.1.0"
description = "Templates for prompt and vector db engineering and easy to call OpenAI functions with spend tracking and error handling!"
authors = ["Silen Naihin <silen.naihin@gmail.com>"]
readme = "README.md"
packages = [{include = "aitemplates"}]

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.3.26"
openai = "^0.27.8"
aiolimiter = "^1.1.0"
aiohttp = "^3.8.4"
nbformat = "^5.9.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aitemplates = 'aitemplates.main:main'
